-
Type:
Bug
-
Status: Resolved
-
Priority:
Trivial
-
Resolution: Fixed
-
Fix Version/s: 0.4.15
-
Component/s: Bootloader
-
Labels:None
-
Module:
I do report this against: 0.4.15-dev-3737-gf8faa0b gcc8.4.0dbg RosBEWin 2.2.1
In 2nd and 3rd stage bootup we do log before the dash separator now already:
(boot/freeldr/freeldr/ntldr/winldr.c:628) fixme: LoadWindowsCore: SOS - TRUE (not implemented)
|
(ntoskrnl/kd64/kdinit.c:74) -----------------------------------------------------
|
The dash separator is intended to be the first thing we log
It wasn't always like that.
It was introduced/triggered during 0.4.14-dev'ing on master.
0.4.15-dev-3737-gf8faa0b affected 0.4.15-dev-3737-gf8faa0b_logSpamBeforeTheDashSeparator.log
0.4.14-release-3-gede659c affected
0.4.13-release-49-g04c7635 and 0.4.13-release-24-g91d3cb5 do not log that yet. z_0413rls24_bootupTill3rdStage_and_shutdown.log
0.4.13-dev-xxx don't do that yet neither
The FIXME logging has been introduced by 0.4.14-dev-1347-g305e856.
Is there any objection to muting this logging?
- relates to
-
CORE-18040 [FREELDR] BiosInfo LogSpam before the dash separator
-
- Resolved
-