[0.4.14][FREELDR] LogSpam before the Dash-separator already CORE-18033

Our default configuration started to spam before the dash separator for 2nd-/3rd-stage:

(boot/freeldr/freeldr/ntldr/winldr.c:628) fixme: LoadWindowsCore: SOS - TRUE (not implemented)
(ntoskrnl/kd64/kdinit.c:74) -----------------------------------------------------

since 0.4.14-dev-1347-g 305e856ef82561f9c784920da56f1612a7baad01

I left master untouched for now, because hbelusca has something in the making
for the actual implementation already. He expects to merge that "soon"(TM)
and does not have to merge anything then. I do not intend to wait that long
for the release though.
The other options are left in spam-mode, because they are not the default.